src/objects/Process_QA__c.object
<CustomObject>
    <fields>
        <fullName>CSC_CreateDate__c</fullName>
        <label>CSC_CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Process QA</relationshipLabel>
        <relationshipName>Process_QA_Case_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Process QA (Case)</relationshipLabel>
        <relationshipName>Process_QA_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_QA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Code__c</fullName>
        <label>QA Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QA_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0A-See comments</fullName>
                </value>
                <value>
                    <fullName>0B-HP IT system down</fullName>
                </value>
                <value>
                    <fullName>AA-Entitlement Problem</fullName>
                </value>
                <value>
                    <fullName>ZZ-No Issues</fullName>
                </value>
                <value>
                    <fullName>BA-Diag.wrong/incomp</fullName>
                </value>
                <value>
                    <fullName>BH-wrong parts info</fullName>
                </value>
                <value>
                    <fullName>LA-Local issue A</fullName>
                </value>
                <value>
                    <fullName>LB-Local issue B</fullName>
                </value>
                <value>
                    <fullName>PC-Missing part info</fullName>
                </value>
                <value>
                    <fullName>PF-Damaged/DOA</fullName>
                </value>
                <value>
                    <fullName>SC-Addl prob found</fullName>
                </value>
                <value>
                    <fullName>XB-Lack skill/knowledge</fullName>
                </value>
                <value>
                    <fullName>XG-Tool/Manual missing</fullName>
                </value>
                <value>
                    <fullName>XH-Manual/Documentation not read</fullName>
                </value>
                <value>
                    <fullName>XI-CE Assist open with wrong Priority</fullName>
                </value>
                <value>
                    <fullName>XJ-CE was not onsite anymore</fullName>
                </value>
                <value>
                    <fullName>MR-Misrouted Call</fullName>
                </value>
                <value>
                    <fullName>SD-Sys Down Dependency</fullName>
                </value>
                <value>
                    <fullName>D1-IRS Assistance</fullName>
                </value>
                <value>
                    <fullName>D2-Proactive Scan</fullName>
                </value>
                <value>
                    <fullName>D3-FW&amp;SW Patch Analysis</fullName>
                </value>
                <value>
                    <fullName>D4-FW Analysis</fullName>
                </value>
                <value>
                    <fullName>D5-SW Patch Analysis</fullName>
                </value>
                <value>
                    <fullName>D6-Incident Reporting</fullName>
                </value>
                <value>
                    <fullName>Demo Center</fullName>
                </value>
                <value>
                    <fullName>Ink and Media</fullName>
                </value>
                <value>
                    <fullName>Ink Conversion</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Machine Recertification</fullName>
                </value>
                <value>
                    <fullName>Service Delivery Absorbed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Type__c</fullName>
        <label>QA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Agent</fullName>
                </value>
                <value>
                    <fullName>CE Assist</fullName>
                </value>
                <value>
                    <fullName>CE QA</fullName>
                </value>
                <value>
                    <fullName>CE SAFE</fullName>
                </value>
                <value>
                    <fullName>Competency Center</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Dispatcher/RC</fullName>
                </value>
                <value>
                    <fullName>DOA Fulfillment</fullName>
                </value>
                <value>
                    <fullName>DOA Functional</fullName>
                </value>
                <value>
                    <fullName>Insight RS</fullName>
                </value>
                <value>
                    <fullName>Parts Allocation</fullName>
                </value>
                <value>
                    <fullName>Qualifier/DBD</fullName>
                </value>
                <value>
                    <fullName>Software Support</fullName>
                </value>
                <value>
                    <fullName>Trust Entitlement</fullName>
                </value>
                <value>
                    <fullName>Warranty POP Validation</fullName>
                </value>
                <value>
                    <fullName>GSB-PSP Services QA</fullName>
                </value>
                <value>
                    <fullName>Proactive Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Process QA</relationshipLabel>
        <relationshipName>Process_QA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process QA</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>ProcessQAId</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASC_Can_Not_Create_PQA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Profile.Name == &apos;CSC&amp;FST ASC&apos;, Case_Id__r.Id !=null,Case_Id__r.Id !=&apos;&apos;)</errorConditionFormula>
        <errorMessage>The ASC can not create process QA on case!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>The_Case_Cannot_be_Close</fullName>
        <active>true</active>
        <description>除管理员外，其他用户在Case关闭后禁止更新Process QA结果。</description>
        <errorConditionFormula>AND($User.Username != &apos;help@h3c.com.prd&apos; , $User.Username != &apos;spms@h3c.com&apos; , $User.Username != &apos;ying.liao@h3c.com.prd&apos; ,Text( Case_Id__r.Status ) == &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>The Case has been Closed and can not add Process QA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>The_WorkOrder_can_not_be_closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.Username != &apos;help@h3c.com.prd&apos;,Text(WorkOrder__r.Status) == &apos;Closed&apos;)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>The workorder status can not be closed.</errorMessage>
    </validationRules>
</CustomObject>